[package]
name = "amm-anchor"
version = "0.1.0"
description = "Anchor bindings for the AMM native instruction."
homepage = "https://raydium.io/"
repository = "https://github.com/raydium-io/raydium-contract-instructions"
edition = "2021"
keywords = ["solana", "raydium", "amm", "anchor"]

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", tag = "v0.26.0", version = "0.26.0", package = "anchor-lang" }
solana-program = "=1.17.5"
ahash = "=0.8.6"
spl-token = { version="~3.5.0", features = [ "no-entrypoint" ] }
raydium-contract-instructions = { path = "../lib"}
