[package]
name = "raydium-amm-router-v3"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "raydium_amm_router_v3"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = ">=1.16, <1.18"
anchor-lang = {version = "0.29.0", features = ["init-if-needed"]}
anchor-spl = "=0.29.0"
spl-memo = "=4.0.0"
ahash = "=0.8.6"
spl-token = "=4.0.0" 

amm-anchor = { git = "https://github.com/raydium-io/raydium-contract-instructions", package = "amm-anchor" }
bkswapv3 = { path = "../bkswapv3", features = ["cpi"] }
