[package]
name = "raydium_test_helper"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "raydium_test_helper"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", tag = "v0.26.0", version = "0.26.0", package = "anchor-lang" }
spl-token = { version = "~3.5.0", features = ["no-entrypoint"] }
amm-anchor = { path = "../../../amm-anchor" }
